--- a/style.css
+++ b/style.css
@@ -111,7 +111,6 @@ body{
 }
 
 #intro-text{
-  
   color:#FCD751;
   
 }
@@ -132,10 +131,13 @@ body{
 #intro{
   background-color:black;
   padding:10px;
+
 }
 
 #para1{
   color:#FFE81F;
+    text-align: justify !important;
+
 }
 
 #part1{
@@ -148,11 +150,19 @@ body{
 }
 
 #part1text{
-  color:#333333  
+  color:#333333;
+  text-align: justify !important;
+
+}
+#part1t{
+color:#333333;
+text-align: center;
 }
 
 #zoomchoice{
   color:#333333;
+  text-align: justify !important;
+
 }
 
 #part2{
@@ -161,18 +171,24 @@ body{
 }
 
 #lose1{
-  background-color:#FB4226;
+  background-color:#FFC0CB;
   padding:10px;
 }
 
 #failure{
-  color:#ffffff;
+  color:#222222;
+  text-align: justify !important;
+
 }
 
 #ending{
-  background-color:darkgreen;
+  background-color:#98FB98;
   padding:10px;
 }
+
+#goodend{
+text-align:justify !important;}
+
 
 .ZCOOL{
     font-weight:bold;
@@ -180,16 +196,22 @@ body{
 }
 
 a{
-	color:black !important;
 	font-size: 22px !important;
 	text-decoration: underline !important;
+	text-align: justify !important;
 	
 }
 
 #end{
-font-size: 36px;}
+font-size: 36px;
+text-align: center;
+color:#222222;
+}
 
 
 #credit{
 color:white !important;
 }
+
+
+
